# individual_assignment

./: setup.cfg
src/schnapsen_assignment/student/: bot.py  check_implementation.py
