##########################
# Setup.py Configuration #
##########################
[metadata]
name = schnapsen-assignment
version = 0.0.2
description = Assignment for the project intelligent systems course
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/intelligent-systems-course/assignment-draft
maintainer = Michael Cochez
maintainer_email = nospam@nospam.com
project_urls =
    Bug Tracker = https://github.com/intelligent-systems-course/
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Topic :: Games/Entertainment

[options]
install_requires =
    click>=8.1.8  # for CLI

    schnapsen @ git+https://github.com/intelligent-systems-course/schnapsen@main
    protobuf>=4.25

    requests==2.31

# Where is my code
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
test =
    flake8
    mypy
    pytest
    unittest-templates


[options.entry_points]
console_scripts =
    schnapsen = schnapsen_assignment.check_implementation:main

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
# line too long
    E501

import-order-style = pycharm

application-import-names =
    schnapsen

exclude =


########################
# mypy Configuration   #
# (mypy.ini)           #
########################

[mypy]

[mypy-schnapsen.deck]
warn_return_any = False

[mypy-class_resolver]
ignore_missing_imports = True

[mypy-unittest_templates]
ignore_missing_imports = True


########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    # name: description
